--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>info.nemoworks</groupId>
         <artifactId>udo-application</artifactId>
 		<version>0.0.1</version>
-        <relativePath>../.</relativePath><!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
     </parent>
     <groupId>info.nemoworks</groupId>
     <artifactId>udo-api-graphql</artifactId>
@@ -18,6 +18,10 @@
             <groupId>info.nemoworks</groupId>
             <artifactId>udo-core</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>info.nemoworks</groupId>
