--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
             <artifactId>udo-core</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>info.nemoworks</groupId>
             <artifactId>udo-storage-elasticsearch</artifactId>
